# parallel_matrix_multiplication

./: CMakeLists.txt  README.md  README.txt  main.cpp  matrix_multiplier_test.h  optimized_parallel_matrix_multiplier_test.h  parallel_matrix_multiplier_test.h  sequential_matrix_multiplier_test.h
